# LUMM-server

./: .dockerignore  .editorconfig  .env.example  .env.vault  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENCE  LUMM.postman_collection.json  README.md  TECH_STACK.md  compile-requirements.sh  docker-compose-redis.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  import_inaturalist_photos_release_1.py  import_species.py  import_species_release_1.py  package.json  pyproject.toml  release-please-config.json  requirements.in  requirements.txt  wsgi.py
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  dast.yml  deploy.yml  import-iucn-red-list-status.yml  new-release.yml  release-please.yml  release.yml  restart-container.yml  snapshot-db.yml  sync-bold.yml  sync-inaturalist.yml  sync-iucn-red-list.yml  sync-mushroom-observer.yml  sync-mycobank.yml  sync-specieslink.yml  teste-runner.yml
app/: __init__.py  exceptions.py
app/config/: __init__.py  cors.py
app/models/: __init__.py  decay_type.py  distribution.py  growth_form.py  habitat.py  nutrition_mode.py  observation.py  reference.py  specie.py  species.py  species_change_request.py  species_characteristics.py  species_characteristics_decay_type.py  (+11 more)
scripts/: cleanup_species_tmp_uploads.py  import_iucn_red_list_status.py  import_mycobank_release_1.py  plot_epv.py  snapshot_db.py  sync_base.py  sync_bold.py  sync_inaturalist.py  sync_iucn_red_list.py  sync_mushroom_observer.py  sync_mycobank.py  sync_specieslink.py
(+110 files in other folders)
