[project]
name = "lumm-server"
version = "0.1.0"
description = "Backend API for LUMM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.14.1",
    "biopython==1.85",
    "boto3==1.40.54",
    "botocore==1.40.76",
    "flask==3.1.3",
    "Flask-Cors==6.0.0",
    "Flask-JWT-Extended==4.6.0",
    "Flask-Migrate==4.1.0",
    "flask-smorest==0.44.0",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn==23.0.0",
    "marshmallow==3.26.2",
    "numpy==2.0.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv-vault==0.6.4",
    "requests==2.33.0",
    "SQLAlchemy==2.0.46",
    "webargs==8.6.0",
    "redis==5.2.1",
    "sentry-sdk>=2.54.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "minio>=7.2.20",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "ruff==0.12.12",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "scripts", "tests"]
extend-exclude = ["migrations", "venv", ".venv", "node_modules", ".pytest_cache", ".ruff_cache", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
